@@ -200,58 +200,32 @@ block|}
 block|}
 return|;
 block|}
-comment|/**     * An empty SortedNumericDocValues which returns zero values for every document     */
+comment|/**    * An empty SortedNumericDocValues which returns zero values for every document     */
 DECL|method|emptySortedNumeric
 specifier|public
 specifier|static
 specifier|final
 name|SortedNumericDocValues
 name|emptySortedNumeric
-parameter_list|()
-block|{
-return|return
-operator|new
-name|SortedNumericDocValues
-argument_list|()
-block|{
-annotation|@
-name|Override
-specifier|public
-name|void
-name|setDocument
 parameter_list|(
 name|int
-name|doc
+name|maxDoc
 parameter_list|)
-block|{}
-annotation|@
-name|Override
-specifier|public
-name|long
-name|valueAt
-parameter_list|(
-name|int
-name|index
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|IndexOutOfBoundsException
-argument_list|()
-throw|;
-block|}
-annotation|@
-name|Override
-specifier|public
-name|int
-name|count
-parameter_list|()
 block|{
 return|return
-literal|0
-return|;
-block|}
-block|}
+name|singleton
+argument_list|(
+name|emptyNumeric
+argument_list|()
+argument_list|,
+operator|new
+name|Bits
+operator|.
+name|MatchNoBits
+argument_list|(
+name|maxDoc
+argument_list|)
+argument_list|)
 return|;
 block|}
 comment|/**     * An empty SortedDocValues which returns {@link SortedSetDocValues#NO_MORE_ORDS} for every document     */
@@ -259,98 +233,23 @@ DECL|method|emptySortedSet
 specifier|public
 specifier|static
 specifier|final
-name|SortedSetDocValues
+name|RandomAccessOrds
 name|emptySortedSet
 parameter_list|()
 block|{
 return|return
-operator|new
-name|RandomAccessOrds
+name|singleton
+argument_list|(
+name|emptySorted
 argument_list|()
-block|{
-annotation|@
-name|Override
-specifier|public
-name|long
-name|nextOrd
-parameter_list|()
-block|{
-return|return
-name|NO_MORE_ORDS
-return|;
-block|}
-annotation|@
-name|Override
-specifier|public
-name|void
-name|setDocument
-parameter_list|(
-name|int
-name|docID
-parameter_list|)
-block|{}
-annotation|@
-name|Override
-specifier|public
-name|BytesRef
-name|lookupOrd
-parameter_list|(
-name|long
-name|ord
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|IndexOutOfBoundsException
-argument_list|()
-throw|;
-block|}
-annotation|@
-name|Override
-specifier|public
-name|long
-name|getValueCount
-parameter_list|()
-block|{
-return|return
-literal|0
-return|;
-block|}
-annotation|@
-name|Override
-specifier|public
-name|long
-name|ordAt
-parameter_list|(
-name|int
-name|index
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|IndexOutOfBoundsException
-argument_list|()
-throw|;
-block|}
-annotation|@
-name|Override
-specifier|public
-name|int
-name|cardinality
-parameter_list|()
-block|{
-return|return
-literal|0
-return|;
-block|}
-block|}
+argument_list|)
 return|;
 block|}
 comment|/**     * Returns a multi-valued view over the provided SortedDocValues     */
 DECL|method|singleton
 specifier|public
 specifier|static
-name|SortedSetDocValues
+name|RandomAccessOrds
 name|singleton
 parameter_list|(
 name|SortedDocValues
@@ -883,7 +782,12 @@ condition|)
 block|{
 return|return
 name|emptySortedNumeric
+argument_list|(
+name|in
+operator|.
+name|maxDoc
 argument_list|()
+argument_list|)
 return|;
 block|}
 name|Bits
