@@ -1396,7 +1396,12 @@ operator|=
 name|DocValues
 operator|.
 name|emptySortedNumeric
+argument_list|(
+name|reader
+operator|.
+name|maxDoc
 argument_list|()
+argument_list|)
 expr_stmt|;
 block|}
 name|toMerge
